--- a/app/src/main/res/layout/menu_inicio.xml
+++ b/app/src/main/res/layout/menu_inicio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -20,6 +21,29 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:src="@mipmap/icon_action_tickets" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/contentInterUrbanos"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/contentTicket"
+        android:background="@drawable/bg_blue">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/intercity"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/md_white_1000"
+            android:src="@mipmap/icon_action_tickets"
+            android:drawablePadding="16dp"
+            android:gravity="center_vertical"
+            app:drawableStartCompat="@drawable/ic_confirmation_number" />
 
     </RelativeLayout>
 
