--- a/app/src/main/res/layout/fragment_intercity.xml
+++ b/app/src/main/res/layout/fragment_intercity.xml
@@ -53,8 +53,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/bg_white_rounded"
-        android:padding="12dp"
+        android:background="@drawable/bg_button_main"
+        android:paddingVertical="12dp"
+        android:paddingHorizontal="16dp"
+        android:elevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spBus">
@@ -67,7 +69,8 @@
             android:gravity="center_vertical"
             android:padding="4dp"
             android:text="@string/one_way"
-            android:textSize="16sp"
+            android:textSize="18sp"
+            android:textColor="@color/md_white_1000"
             app:drawableStartCompat="@drawable/ic_one_way"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tvHourOneDay"
@@ -80,7 +83,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
+            android:textSize="18sp"
             android:textAlignment="center"
+            android:textColor="@color/md_white_1000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/removeDateOneWay"
             app:layout_constraintHorizontal_weight=".4"
@@ -119,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
