--- a/app/src/main/res/layout/activity_select_sillas.xml
+++ b/app/src/main/res/layout/activity_select_sillas.xml
@@ -184,6 +184,7 @@
                             android:layout_margin="5dp"
                             android:text="Ruta: Neiva - Bogotá"
                             android:textSize="@dimen/size_text"
+                            android:textAlignment="center"
                             android:fontFamily="@font/font_main"/>
 
                         <TextView
