--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,24 @@
         <item name="android:gravity">left</item>
     </style>
 
+    <style name="edit_text_dark" parent="Theme.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/size_editext</item>
+        <item name="android:background">@drawable/bg_editext_dark</item>
+        <item name="android:textColor">@color/md_black_1000</item>
+        <item name="android:textColorHint">@color/md_black_1000_75</item>
+        <item name="android:textSize">@dimen/size_text</item>
+        <item name="android:ems">10</item>
+        <item name="android:alpha">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:imeOptions">actionNext</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:gravity">left</item>
+    </style>
+
     <style name="ButtonCustom" parent="Theme.AppCompat.Light">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/height_button</item>
