--- a/app/src/main/res/layout/fragment_update_ticket.xml
+++ b/app/src/main/res/layout/fragment_update_ticket.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnUpdateTicket"
+        app:layout_constraintBottom_toTopOf="@+id/btnSelectChair"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,18 +30,37 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="32dp"
-                android:imeOptions="actionDone"
-                android:hint="@string/voucher" />
+                android:hint="@string/voucher"
+                android:imeOptions="actionDone" />
 
-            <Button
-                android:id="@+id/btnSearchTicket"
-                style="@style/ButtonCustom"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:orientation="horizontal"
                 android:paddingStart="48dp"
-                android:paddingEnd="48dp"
-                android:text="@string/search" />
+                android:paddingEnd="48dp">
+
+                <Button
+                    android:id="@+id/btnSearchTicket"
+                    style="@style/ButtonCustom"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="8dp"
+                    android:text="@string/search" />
+
+                <Button
+                    android:id="@+id/btnRefundTicket"
+                    style="@style/ButtonCustom"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:visibility="gone"
+                    android:text="@string/devolution"/>
+
+            </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/selectorOneWay"
@@ -128,9 +147,9 @@
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/font_main"
-                android:textSize="@dimen/size_text"
-                android:textAlignment="center"
                 android:lineSpacingMultiplier="1.25"
+                android:textAlignment="center"
+                android:textSize="@dimen/size_text"
                 tools:text="Ruta: Diego Almagro - Salado\nInicio: Diego Almagro" />
 
         </LinearLayout>
@@ -138,16 +157,14 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btnUpdateTicket"
+        android:id="@+id/btnSelectChair"
         style="@style/ButtonCustom"
         android:layout_margin="16dp"
-        android:layout_marginTop="48dp"
-        android:text="@string/update_ticket"
+        android:layout_marginTop="16dp"
+        android:text="@string/update"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
