--- a/app/src/main/res/layout/fragment_update_ticket.xml
+++ b/app/src/main/res/layout/fragment_update_ticket.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnSelectChair"
+        app:layout_constraintBottom_toTopOf="@+id/containerButtons"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,55 +23,96 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/etVoucher"
-                style="@style/edit_text_dark"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="32dp"
-                android:hint="@string/voucher"
-                android:imeOptions="actionDone" />
+                android:labelFor="@+id/etVoucher"
+                android:text="@string/enter_ticket_number"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:paddingStart="48dp"
-                android:paddingEnd="48dp">
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <Button
+                <EditText
+                    android:id="@+id/etVoucher"
+                    style="@style/edit_text_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_weight=".2"
+                    android:hint="@string/ticket_number"
+                    android:imeOptions="actionDone"
+                    android:textAlignment="center" />
+
+                <ImageButton
                     android:id="@+id/btnSearchTicket"
                     style="@style/ButtonCustom"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
                     android:layout_marginHorizontal="8dp"
-                    android:text="@string/search" />
-
-                <Button
-                    android:id="@+id/btnRefundTicket"
-                    style="@style/ButtonCustom"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="8dp"
-                    android:visibility="gone"
-                    android:text="@string/devolution"/>
+                    android:layout_weight=".8"
+                    android:contentDescription="@string/search"
+                    app:srcCompat="@drawable/ic_search" />
 
             </LinearLayout>
+
+            <TextView
+                style="@style/TextInfoPerfil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/ticket_info"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tvTicketInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/font_main"
+                android:lineSpacingMultiplier="1.25"
+                android:textAlignment="center"
+                android:textSize="@dimen/size_text"
+                tools:text="Ruta: Diego Almagro - Salado\nInicio: Diego Almagro" />
+
+            <TextView
+                android:id="@+id/tvTitleModifySeats"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/select_seats"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/containerSelectSeats"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/selectorOneWay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/bg_button_main"
                 android:elevation="5dp"
                 android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp">
+                android:paddingVertical="12dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tvOneWay"
@@ -131,40 +172,37 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                style="@style/TextInfoPerfil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="@string/ticket_info"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/tvTicketInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/font_main"
-                android:lineSpacingMultiplier="1.25"
-                android:textAlignment="center"
-                android:textSize="@dimen/size_text"
-                tools:text="Ruta: Diego Almagro - Salado\nInicio: Diego Almagro" />
-
         </LinearLayout>
 
     </ScrollView>
 
-    <Button
-        android:id="@+id/btnSelectChair"
-        style="@style/ButtonCustom"
-        android:layout_margin="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/update"
-        android:visibility="gone"
+    <LinearLayout
+        android:id="@+id/containerButtons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/btnRefundTicket"
+            style="@style/ButtonCustom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_weight=".5"
+            android:text="@string/devolution" />
+
+        <Button
+            android:id="@+id/btnSelectChair"
+            style="@style/ButtonCustom"
+            android:layout_width="match_parent"
+            android:layout_margin="16dp"
+            android:layout_weight=".5"
+            android:text="@string/update" />
+
+    </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/progressBar"
